@@ -28,3 +28,11 @@ img {
     background-color: #faba7a;
     border:1px solid #cb210e;
 }
+.wgt-tooltip-img {
+    width:16px;
+}
+.wgt-tooltip-header {
+    font-weight:700;
+    padding-bottom:20px;
+    border-bottom:1px solid #ccc;
+}
