@@ -1,10 +1,4 @@
 Read Me First
 =============
 
-Originally created by the TDM Team.
-
-Modified by Timgno (http://www.txmodxoops.org)
-
-Contributors: Mamba (https://xoops.org), Goffy (German Xoops)
-
-Included ideas for Logo Generator from Trabis (Publisher module) and Suin (Koins module)
+Originally created by Goffy - XOOPS Development Team.
