@@ -1,4 +1,5 @@
 ==============================================================
 1.0.0 [2023/03/01 6:40:15]
 ==============================================================
- - Original release wgtestui (TDM XOOPS)
+ - Original release wgtestui (goffy)
+ - added display_dialog for test result details (goffy)
